--- a/Seiten/Html/Shop.html
+++ b/Seiten/Html/Shop.html
@@ -58,60 +58,113 @@
           </nav>
         </div>
       </nav>
-     
-          <div class="container mt-5">
-            <div class="row">
-              <div class="col-md-4">
-                <div class="card">
-                  <img src="../../img/water.png" class="mx-auto" alt="Waterbottle" style="width: 40%;" style="height: 40%;">
-                  <div class="card-body">
-                    <h5 class="card-text red">17.-</h5>
-                    <h4 class="card-title">water bottle</h4>
-                    <p class="card-text">Its just a water bottle</p>
-                    <div class="d-flex bd-highlight">
-                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
-                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img src="../../img/zange.png" class="mx-auto" alt="tongs" style="width: 40%;" style="height: 40%;">
-                  <div class="card-body">
-                    <h5 class="card-text red">56.-</h5>
-                    <h4 class="card-title">tongs</h4>
-                    <p class="card-text">usefull tool</p>
-                    <div class="d-flex bd-highlight">
-                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
-                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card">
-                  <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 56%;" style="height: 56%;">
-                  <div class="card-body">
-                    <h5 class="card-text red">135.- <small class="card-text red"><del>178.-</del></small></h5>
-                    <h4 class="card-title">boots</h4>
-                    <p class="card-text">warm boots</p>
-                    <div class="d-flex bd-highlight">
-                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
-                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </div>
-      </div>
 
-      <button onclick="getData()">Get Data</button>
-    <div id="table"></div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <div id="product-overview"></div>
+
+    <script>
+        // Parse the JSON data and display the product overview
+        fetch('http://localhost:3004/get_product')
+            .then(response => response.json())
+            .then(data => {
+                // Define the sample data
+                /*let data = [
+              {
+                produktID: 1,
+                name: 'Test Product',
+                Image: '../../img/reale_erde.png',
+                price: 12.5,
+                producer: 'God product',
+                description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+              }
+            ];*/
+
+                // Get a reference to the element where you want to display the product overview
+                let container = document.getElementById('product-overview');
+
+                // Loop through the data array and create elements to display each product
+                data.forEach(product => {
+                    // Create the product container
+                    let productDiv = document.createElement('div');
+                    productDiv.classList.add('product', 'card', 'col-md-5');
+
+                    // Create the image element
+                    let img = document.createElement('img');
+
+                    // Convert the BLOB data to a base64-encoded string
+                    let imageUrl = 'data:image/jpeg;base64,' + btoa(String.fromCharCode.apply(null, product.Image));
+
+                    // Set the src attribute of the img element to the image URL
+                    img.src = imageUrl;
+                    img.alt = product.name;
+                    img.classList.add('card-img-top');
+
+                    // Create the card body container
+                    let cardBody = document.createElement('div');
+                    cardBody.classList.add('card-body');
+
+                    // Create the name element
+                    let name = document.createElement('h3');
+                    name.classList.add('card-title');
+                    name.textContent = product.name;
+
+                    // Create the price element
+                    let price = document.createElement('p');
+                    price.classList.add('card-text');
+                    price.textContent = 'Price: $' + product.price;
+
+                    // Create the producer element
+                    let producer = document.createElement('p');
+                    producer.classList.add('card-text');
+                    producer.textContent = 'Producer: ' + product.producer;
+
+                    // Create the description element
+                    let description = document.createElement('p');
+                    description.classList.add('card-text');
+                    description.textContent = product.description;
+
+                    // Create the buy now button
+                    let button = document.createElement('a');
+                    button.href = '?' + product.produktID;  // Set the href to the product ID
+                    button.classList.add('btn', 'btn-primary');
+                    button.textContent = 'Buy Now';
+
+                    // Create the Shopping Cart Link element
+                    let shoppingCartLink = document.createElement('a');
+                    shoppingCartLink.href = 'warenkorb.html?' + product.produktID;  // Set the href to the desired page
+
+                    let shoppingCartIcon = document.createElement('img');
+                    shoppingCartIcon.src = '../../img/shopping_cart.png';
+                    shoppingCartIcon.classList.add('p-2', 'flex-shrink-1', 'bd-highlight');  // Add any desired classes
+                    shoppingCartIcon.alt = 'Waterbottle';
+                    shoppingCartIcon.style.width = '15%';
+                    shoppingCartIcon.style.height = '15%';
+
+                    shoppingCartLink.appendChild(shoppingCartIcon);
+
+
+
+                    // Add the name, price, producer, and description elements to the card body container
+                    cardBody.appendChild(name);
+                    cardBody.appendChild(price);
+                    cardBody.appendChild(producer);
+                    cardBody.appendChild(description);
+                    cardBody.appendChild(button);
+                    cardBody.appendChild(shoppingCartLink);
+
+                    // Add the image and card body container to the product container
+                    productDiv.appendChild(img);
+                    productDiv.appendChild(cardBody);
+
+                    // Add the product container to the page
+                    container.appendChild(productDiv);
+                });
+
+            });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
