--- a/Seiten/Html/AccountViewChange.html
+++ b/Seiten/Html/AccountViewChange.html
@@ -13,6 +13,8 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!--<script src="../javascripts/ApiTalkForAcc.js"></script>-->
     <style>
       body {
         background-image: url("../../img/LoginBackgroundImg.jpg");
@@ -24,30 +26,6 @@
         color: black;
         width: 80%;
         opacity: 0.9;
-      }
-      .white-box-inf {
-        background-color:gainsboro;
-        color: black;
-        width: 10px;
-        opacity: 0.9;
-        width: 500px;
-        height: 40%;
-        margin-top: 50px;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 30px;
-        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-        -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
-        border-radius: 5px;
-      }
-
-      .white-box-inf {
-        opacity: 1;
       }
     </style>
   </head>
@@ -99,66 +77,16 @@
     <!--Navigation End-->
     <!--WhiteBoxWithButtonsStart-->
     <div class="white-box">
-      <a href="./Homepage.html"
-        ><button
-          style="
-            background-color: red;
-            width: auto;
-            float: right;
-            border-radius: 15%;
-          "
-        >
-          X
-        </button></a
-      >
-      <h2 style="text-align: center; margin-bottom: 10px; font-size: xx-large">
-        Welcome to your Account
-      </h2>
-      <img
-        style="
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
-          width: 20%;
-        "
-        src="../../img/DefaultAvatar.jpg"
-      />
-      <div id="AccINF" class="white-box-inf"></div>
-      <script>
-        showAccount();
-        async function getUser(userId) {
-          let data;
-          await fetch("http://localhost:3004/get_user/" + userId)
-            .then((res) => res.json())
-            .then((json) => {
-              data = json;
-              console.log("picked user ID: " + json[0].userID);
-            });
-          return data;
-        }
-
-        async function showAccount() {
-          var userId = 1;
-          var Data = await getUser(userId);
-          var DataID = Data[0].userID;
-          const div = document.getElementById("AccINF");
-          div.innerHTML = "<p>" + Data[0].userID + "</p>";
-        }
-      </script>
-      <a href="./AccountViewChange.html"
-        ><button
-          style="
-            background-color: deepskyblue;
-            width: auto;
-            float: right;
-            border-radius: 15%;
-            margin-right: 25%;
-          "
-        >
-          Change
-        </button></a
-      >
-      <p style="margin-bottom: 25pt"></p>
+        <a href="./Homepage.html"><button style="background-color: red; width: auto; float: right; border-radius: 15%;">X</button></a>
+        <h2 style="text-align: center; margin-bottom: 10px; font-size:xx-large;">Welcome to your Account</h2>
+        <img 
+        style="display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;"
+        src="../../img/DefaultAvatar.jpg">
+        <a href="./AccountViewChange.html"><button style="background-color:deepskyblue; width: auto; float: right; border-radius: 15%; margin-right: 25%;">Change</button></a>
+        <p style="margin-bottom: 25pt;"></p>
     </div>
     <!--WhiteBoxWithButtonsEnd-->
     <script
